--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,8 @@ services:
       - '55658:3000'
     environment:
       - PAYLOAD_SECRET=${PAYLOAD_SECRET}
-      - DATABASE_URI=mongodb://mongo:27017/nianiba-payload 
+      - DATABASE_URI=mongodb://mongo:27017/nianiba-payload
+      - NODE_ENV=production
     volumes:
       - .:/home/node/app
       - node_modules:/home/node/app/node_modules
