--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -8,7 +8,7 @@ WORKDIR /home/node/app
 COPY package*.json ./
 
 # Install dependencies
-RUN yarn install --production=false
+RUN yarn install --production=false --verbose
 
 # Copy the rest of the application code
 COPY . .
