--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   payload:
-    build: .
+    # build: .
     ports:
       - '55658:3000'
     environment:
@@ -10,10 +10,10 @@ services:
       - DATABASE_URI=mongodb://mongo:27017/nianiba-payload
       # - NODE_ENV=production
     volumes:
-      # - .:/home/node/app
+      - .:/home/node/app
       - node_modules:/home/node/app/node_modules
     working_dir: /home/node/app/
-    # command: sh -c "yarn install --production=false && yarn dev"
+    command: sh -c "yarn install --production=false && yarn dev"
     depends_on:
       - mongo
     env_file:
