--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3'
 
 services:
   payload:
-    image: node:18-alpine 
-    # build: .
+    #image: node:18-alpine 
+    build: .
     ports:
       - '55658:3000'
     environment:
@@ -11,10 +11,10 @@ services:
       - DATABASE_URI=mongodb://mongo:27017/nianiba-payload
       # - NODE_ENV=production
     volumes:
-      - .:/home/node/app
+      #- .:/home/node/app
       - node_modules:/home/node/app/node_modules
     working_dir: /home/node/app/
-    command: sh -c "yarn install --production=false && yarn dev"
+    # command: sh -c "yarn install --production=false && yarn dev"
     depends_on:
       - mongo
     env_file:
