--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       # - NODE_ENV=production
     volumes:
       #- .:/home/node/app
-      - node_modules:/home/node/app/node_modules
+      # - node_modules:/home/node/app/node_modules
     working_dir: /home/node/app/
     # command: sh -c "yarn install --production=false && yarn dev"
     depends_on:
@@ -33,4 +33,4 @@ services:
 
 volumes:
   data:
-  node_modules:
+ # node_modules:
