--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,12 @@ services:
       - data:/data/db
     # logging:
       # driver: none
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongo mongo:27017/test --quiet
+      interval: 10s
+      timeout: 10s
+      retries: 6
+      start_period: 40s  
 
 volumes:
   data:
