--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,13 @@ version: '3'
 
 services:
   payload:
-    #image: node:18-alpine 
+    #image: node:18-alpine
     build: .
     ports:
       - '3000'
     environment:
       - PAYLOAD_SECRET=${PAYLOAD_SECRET}
-      - DATABASE_URI=mongodb://mongo:27017/nianiba-payload
+      - DATABASE_URI=postgresql://postgres:${POSTGRES_PASSWORD}@localhost:5432/nianiba-db
       # - NODE_ENV=production
     # volumes:
       #- .:/home/node/app
@@ -26,6 +26,17 @@ services:
       - mongo
         #condition: service_healthy
 
+  postgres:
+    image: "postgres:16.3-alpine"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: nianiba-db
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
+
   mongo:
     image: mongo:latest
     ports:
@@ -41,7 +52,7 @@ services:
      # interval: 10s
       #timeout: 10s
       #retries: 6
-      #start_period: 40s  
+      #start_period: 40s
 
 volumes:
   data:
