--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@payloadcms/bundler-webpack": "^1.0.0",
     "@payloadcms/db-mongodb": "^1.0.0",
+    "@payloadcms/db-postgres": "^0.8.2",
     "@payloadcms/plugin-cloud": "^3.0.0",
     "@payloadcms/richtext-slate": "^1.0.0",
     "cross-env": "^7.0.3",
