--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - '3000'
     environment:
       - PAYLOAD_SECRET=${PAYLOAD_SECRET}
-      - DATABASE_URI=postgresql://postgres:${POSTGRES_PASSWORD}@localhost:5432/nianiba-db
+      - DATABASE_URI=${DATABASE_URI}
       # - NODE_ENV=production
     # volumes:
       #- .:/home/node/app
