--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@payloadcms/db-mongodb": "^1.0.0",
     "@payloadcms/db-postgres": "^0.8.2",
     "@payloadcms/plugin-cloud": "^3.0.0",
+    "@payloadcms/richtext-lexical": "^0.11.0",
     "@payloadcms/richtext-slate": "^1.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
