--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "generate:graphQLSchema": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:graphQLSchema",
     "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload",
-    "payload:migrate": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload migrate",
+    "payload:migrate:create": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload migrate:create",
     "payload:distMigrate": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.ts payload migrate",
     "drizzle": "yarn drizzle-kit studio --port 3033 --verbose"
   },
@@ -40,6 +40,6 @@
   },
   "volta": {
     "node": "20.13.1",
-    "yarn": "4.2.2"
+    "yarn": "1.22.19"
   }
 }
