--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,7 +111,9 @@ services:
 
 volumes:
   db-backups:
+    external: true
   db-data:
+    external: true
     # driver: local
     # driver_opts:
     # type: none
