🚧 chore(Dockerfile): updated CMD to run yarn payload:distMigrate

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       retries: 10
     depends_on:
       db-migration:
-        condition: service_completed_successfully
+        condition: service_started
       postgres:
         condition: service_healthy
 
@@ -43,22 +43,11 @@ services:
       - DATABASE_URI=${DATABASE_URI_DOCKER}
     env_file:
       - .env
+    restart: no
     depends_on:
-      build-step:
-        condition: service_started
       postgres:
         condition: service_healthy
 
-  build-step:
-    environment:
-      - NODE_ENV=${NODE_ENV}
-    build:
-      context: .
-      args:
-        - NODE_ENV=${NODE_ENV}
-      target: builder
-    env_file:
-      - .env
 
   postgres:
     image: "postgres:16.3-alpine"
