🚧 chore: added external volumes to `docker-compose.yaml`

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -100,7 +100,9 @@ services:
 
 volumes:
   db-backups:
+    external: true
   db-data:
+    external: true
     # driver: local
     # driver_opts:
     # type: none
