--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -78,12 +78,12 @@ services:
       - POSTGRES_DBNAME=nianiba-db
       - RUN_AS_ROOT=true
       - STORAGE_BACKEND=S3
-      - ACCESS_KEY_ID={{team.S3_ACCESS_KEY}}
-      - SECRET_ACCESS_KEY={{team.S3_SECRET_KEY}}
+      - ACCESS_KEY_ID=${S3_ACCESS_KEY}
+      - SECRET_ACCESS_KEY=${S3_SECRET_KEY}
       - DEFAULT_REGION=eu-1
-      - BUCKET={{team.S3_BUCKET}}/pg-backup
-      - HOST_BASE={{team.S3_ENDPOINT}}
-      - HOST_BUCKET={{team.S3_BUCKET}}
+      - BUCKET=${S3_BUCKET}/pg-backup
+      - HOST_BASE=${S3_ENDPOINT}
+      - HOST_BUCKET=§{S3_BUCKET}
       #- CRON_SCHEDULE="*/5 * * * *"
       #- DB_DUMP_ENCRYPTION=true
       # FOR BACKUP FILE RESTORE:
